--- a/css/style.css
+++ b/css/style.css
@@ -16,14 +16,20 @@
 }
 
 #img-block{
+    border: 1px solid red;
     width: 700px;
     height: 300px;
 }
 
 .immage{
-    width: 100%;
-    height: 100%;
-    display: none;
+    width: 700px;
+    height: 300px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    position: relative;
+    display: inline-block;
 }
 
 .immage.active{
@@ -31,6 +37,27 @@
 }
 
 .immage img{
-    width: 100%;
-    height: 100%;
+    width: 700px;
+    height: 300px;
+    display: block;
+}
+
+/* Button for switch */
+.button{
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: white;
+    opacity: 0.5;
+    padding: 10px;
+    border-radius: 80px;
+    cursor: pointer;
+}
+
+.button.top{
+    top: 10px
+}
+
+.button.bottom{
+    bottom: 10px;
 }
