--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,7 @@
 .immage{
     width: 700px;
     height: 300px;
-    display: flex;
+    
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
@@ -39,6 +39,13 @@
 .immage img{
     width: 700px;
     height: 300px;
+}
+
+img{
+    display: none;
+}
+
+img.active{
     display: block;
 }
 
@@ -58,6 +65,6 @@
     top: 10px
 }
 
-.button.bottom{
+.button.next{
     bottom: 10px;
 }
